# python_basics

./: .gitignore  README.md  indexes.py  pyproject.toml  requirements.txt
NLP/: lemmatisation.py  sentence_transfrom.py
NLP/feature extraction/: bag_of_words.py  tf.py  tf_idf.py
casting/: classes.py  lab.py
consol_parser/: __init__.py  echo.py
containers/: arrays_insert_operation.py  containers_overall_info.py  find_element_in_array.py  map_iteration.py  reduce_list.py  sets.py
containers/my_set/: MySet.py  task.md  (+2 more)
ds_algos_py/: linked_list_test.py  n_square_complexity.py  readme.md  test_hash_map.py  test_queue.py
file_ops/: basic_file_ops.py
flash_cards_exercise/: stage_1.py  stage_2.py  stage_3.py
function_declaration/: function_declaration.py
identity_testing/: identity_riddles.py  identity_testing.py  none_usage.py
inheritance/: Lab.py  Person.py  Student.py
loops_generators/: advance_generator_usage.py  generators_and_memory_efficiency.py  list_from_inputs.py  loops.py
math_funcs/: advanced_arithmetics.py
misc_examples/: heads_n_tail.py  if_else_elif.py  playground.py  tuples_exp.py
moduls/: import_itself.py  socket.py  sub_module.py  top_module.py
np_play/: how_to_animate.py  ufunc_study.py
piano_competition_json_creater/: __init__.py  create_json.py  input.txt
string_json_ops/: accept_the_args.py  convert_arm_template.py  json_parse.py  parse_bullets.py  substitute_params_in_arm.py
string_ops/: accept_the_text_input.py  simple_string_methods.py
time_from/: __init__.py  __main__.py  counter.py  time_from.py
work_with_csv/: process.py
(+19 files in other folders)
