[build-system]
requires = ["setuptools >= 61.0","build"]
build-backend = "setuptools.build_meta"
[project]
name = "fowlart-py-toolbox"
version = "0.0.1-alpha"
dependencies = [
  "numpy==1.26.4"
]
[project.scripts]
fowltool-show-time-left = "time_from:show_days"
fowltool-echo = "consol_parser:read_input"
[tool.setuptools.packages.find]
namespaces = false
where = ["."]
include = ["*"]
exclude = ["dist","fowlart_py_toolbox.egg-info","venv"]
